--- a/src/main/resources/fxml/spotlight.fxml
+++ b/src/main/resources/fxml/spotlight.fxml
@@ -16,9 +16,9 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
         </content>
       </Tab>
-    <Tab text="Rooms lookup">
+    <Tab text="Rooms browser">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+        <fx:include fx:id="roomLookupTabPage" source="roomlookup.fxml"/>
       </content>
     </Tab>
   </tabs>
