--- a/src/main/resources/fxml/spotlight.fxml
+++ b/src/main/resources/fxml/spotlight.fxml
@@ -13,7 +13,7 @@
     </Tab>
       <Tab text="Manage events">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+          <fx:include fx:id="eventManagerTabPage" source="eventmanager.fxml"/>
         </content>
       </Tab>
     <Tab text="Rooms browser">
