--- a/src/main/resources/fxml/eventmanager.fxml
+++ b/src/main/resources/fxml/eventmanager.fxml
@@ -35,8 +35,8 @@
             <Label layoutX="7.0" layoutY="182.0" text="End date:" />
             <TextField fx:id="eventNameTextField" layoutX="91.0" layoutY="76.0" prefHeight="27.0" prefWidth="226.0" />
             <TextField fx:id="mailingListTextField" layoutX="91.0" layoutY="110.0" prefHeight="27.0" prefWidth="227.0" />
-            <DatePicker fx:id="startDateCalendar" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="114.0" />
-            <DatePicker fx:id="endDateCalendar" layoutX="91.0" layoutY="179.0" prefHeight="27.0" prefWidth="114.0" />
+            <DatePicker fx:id="startDateCalendar" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="123.0" />
+            <DatePicker fx:id="endDateCalendar" layoutX="91.0" layoutY="179.0" prefHeight="27.0" prefWidth="123.0" />
             <Label fx:id="eventIDLabel" layoutX="66.0" layoutY="5.0" prefHeight="17.0" prefWidth="252.0" text="-">
                <font>
                   <Font name="Helvetica Bold" size="13.0" />
@@ -47,6 +47,10 @@
                   <Font name="Helvetica Bold" size="13.0" />
                </font>
             </Label>
+            <ChoiceBox fx:id="endMinuteChoiceBox" layoutX="275.0" layoutY="179.0" prefHeight="27.0" prefWidth="42.0" />
+            <ChoiceBox fx:id="startMinuteChoiceBox" layoutX="275.0" layoutY="144.0" prefHeight="27.0" prefWidth="42.0" />
+            <ChoiceBox fx:id="startHourChoiceBox" layoutX="226.0" layoutY="144.0" prefHeight="27.0" prefWidth="42.0" />
+            <ChoiceBox fx:id="endHourChoiceBox" layoutX="227.0" layoutY="179.0" prefHeight="27.0" prefWidth="42.0" />
          </children></Pane>
       <Button fx:id="newEventButton" layoutX="894.0" layoutY="16.0" mnemonicParsing="false" style="-fx-background-color: #2589c6;" text="NEW EVENT" textFill="WHITE" />
       <Button fx:id="deleteEventButton" layoutX="227.0" layoutY="534.0" mnemonicParsing="false" style="-fx-background-color: #f25d26;" text="DELETE EVENT" textFill="WHITE" />
