--- a/src/main/resources/fxml/roomlookup.fxml
+++ b/src/main/resources/fxml/roomlookup.fxml
@@ -47,5 +47,6 @@
          </font>
       </Label>
       <Pane layoutX="876.0" layoutY="21.0" prefHeight="194.0" prefWidth="125.0" />
+      <Button fx:id="refreshButton" layoutX="900.0" layoutY="494.0" mnemonicParsing="false" text="REFRESH" textFill="WHITE" style="-fx-background-color: #686a6b;" />
    </children>
 </AnchorPane>
